css/style.css
/*creo questa classe per non modificare tag body*/
.font{
    font-family: sans-serif;
}

.header-bgcolor{
    background-color: rgb(144, 134, 201);
}

.btn{
    height: 2.5em;
    padding: 5px 5px;

}


.btn-primary{
    background-color: rgb(80, 40, 179);
    border: none;
    color: white;
}

.btn-primary:hover{
    background-color: rgb(54, 12, 161);
    color: lightgrey;
    cursor: pointer;
}

.btn-secondary{
    background-color: white;
    border: 1px solid grey;
    color: grey;
}

.btn-secondary:hover{
    background-color: lightgrey;
    border: 1px solid rgb(79, 79, 79);
    color:  rgb(79,79,79);
    cursor: pointer;
}

.fa-arrow-down{
    font-size: 3em;
    margin-bottom: 15px;
}


/*navbar*/
.navbar{
    height: 4em;
    width: 100%;
    /*test*/
    
    position: fixed;
    top: 0;
    left: 0;

    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid lightgrey;
    background-color: white;
    
    
}

.nav-flex-li{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1em 0.5em;

}

.nav-flex-li-nohover{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1em 0.5em;

}

.nav-flex-li:hover{
    border-bottom: 5px solid dodgerblue;


}

.nav-list a{
    color: black;
    text-decoration: none;
    
}


.nav-list{
    width: 40%;
    /*test*/

    display: flex;
    flex-direction: row;
    justify-content: space-around;

    list-style-type: none;
}
/*/navbar*/


/*header*/
.container-centered-header{
    width:70%;
    margin-left: auto;
    margin-right: auto;
    padding-top: 6em;
}


.container-centered-header a{
    color: black;
    text-decoration: none;
}

.container-centered-header h1{
    font-size: 5em;
    margin-bottom: 30px;
}

.header-p-img{
    display: flex;
    flex-direction: row;
    gap: 2em;
    padding-top: 2em;
}

.header-p{
    max-width:30%;
    /*test*/

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 30px;
}


.header-img{
    position: relative;
}


.header-img img{
    width: 700px;
    height: auto;

    position: absolute;
    left: 0;
    bottom: -70px;
}


/*fine header e navbar*/



/*inizio main*/
.container-centered-main{
   display: flex;
   flex-direction: column;
   gap:3em;
   
    width:70%;
    margin-left: auto;
    margin-right: auto;
    padding:8em 5% 6em 5%;
}

.checkbox{
    display: flex;
    gap:15%;
    
}

/*sezione colonne*/
.columns{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;
}

.bordo-colonna{
    width: 30%;
    border: 1px solid lightgrey;
}

.corpo-colonna{
    display: flex;
    flex-direction: column;
}

.titolino-colonna{
    font-size: 1em;
    font-weight: 400;
}

.utenti-centrato{
    text-align: center;
    border-bottom: 1px solid lightgrey;
    padding: 0.5em;
}

.testo-colonna{
    display: flex;
    flex-direction: column;
    padding:2em 1em;
    gap:2em;
}

.colonna-sezione{
    display: flex;
    flex-direction: column;
    gap:1em;
}


.fa-check{
    color: dodgerblue;
    font-size: 1.5em;
}


.riga-colonna{
    display: flex;
    flex-direction: row;
    gap: 1em;
}

.small-hr{
    width:20%;
    border:1px solid grey;
}

.errore-grave{
    height: 1em;
}

/*/sezione colonne*/




/*sezione team*/
.team-sezione{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap:4em;

    max-width: 65%;
}


.team-sezione-inner{
    display: flex;
    flex-direction: column;
    gap: 1em;
}


.corpo-team{
    display: flex;
    flex-direction: column;
    border: 1px solid lightgrey;
}

.riga-team{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1em;
    padding: 1em;
}


.container-btn-team{
width: 30%;
}

.riga-team button{
    
    width: 100%;
}
/*/sezione team*/


/*sezione img e paragrafo*/
.img-paragrafo{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 2em;
}

.flex-paragrafo{
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap:20px;
    padding: 1em;
}

/*/sezione img e paragrafo*/
.img-paragrafo img{
    width: 600px;
    
}



/*sezione business*/
.titolo-business{
    font-size: 2.5em;
    margin-bottom: 0.5em;
}

.card-container{
    display:flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 3em;
}

.card{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap:0.7em;

    max-width: 30%;
    margin-bottom: 3em;
}
/*/sezione business*/




/*sezione end top main*/
.titolo-endtop-main{
    font-size: 2.5em;
    margin-bottom: 0.5em;
    max-width: 70%;
}

.margin-bottom-endtop{
    margin-bottom: 3em;
}
/*/inizio main*/




/*partners*/
.container-partners{
    display: flex;
    flex-direction: row;
    
    width: 100%;

}

.partners{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    
    width: calc(100vw / 3);
    height: calc(100vw / 3);


    
    

}

.single-partner{
    display: flex;
    justify-content: center;
    align-items: center;
    
    width: 50%;
    height:50%;
    
    
}

#designit{
    background-color: rgb(109, 214, 109) ;
}

#designit:hover{
    border: 20px solid rgb(182, 255, 182);
}

#asu{
    background-color: rgb(72, 11, 11) ;
}

#asu:hover{
    border: 20px solid rgb(109, 52, 52) ;
}


#uf{
    background-color: dodgerblue ;
}

#uf:hover{
    border: 20px solid rgb(119, 179, 238) ;
}


#topps{
    background-color: red ;
}

#topps:hover{
    border: 20px solid rgb(246, 105, 105) ;
}


#worldbr{
    background-color: rgb(136, 0, 0) ;
}

#worldbr:hover{
    border:20px solid rgb(139, 81, 81) ;
}


#hearst{
    background-color: rgb(213, 196, 243) ;
}

#hearst:hover{
    border:20px solid  rgb(242, 235, 255) ;
}



#lonelyplanet{
    background-color: navy ;
}

#lonelyplanet:hover{
    border:20px solid rgb(59, 59, 168) ;
}


#ccoutdoor{
    background-color: yellow ;
}

#ccoutdoor:hover{
    border:20px solid rgb(250, 250, 168) ;
}



.single-partner img{
    width:50%;
    height: auto;
    filter: invert(1);
    
}

.descrizione-partner{
    display: flex;
    flex-direction: column;
    gap:1em;
    padding: 1em;
    flex-grow: 1;

    background-color: lightgrey;
    width: calc(100vw / 3);
}

.descrizione-partner img{
    width: 10em;
    height: 5em;
}
/*/sezione partner*/



/*parte inferiore main*/
.bg-lightblue{
    background-color: rgb(129, 180, 219);
}

.flex-blue-section{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.container-center-bottom-main{
     width:70%;
    margin-left: auto;
    margin-right: auto;
    padding:6em 5%;
}

.flex-blue-section h2{
    font-size: 2.5em;
    width: 50%;
}

.flex-blue-section button{
    width: 35%;
}

.faq-row{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 10px;
    padding: 3em 0;
}

.celle-faq{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 1em;
}


.faq-container-espandibile{
    height: 2.5em;
    overflow: hidden;
    transition: height 2s;
}

.faq-container-espandibile:hover{
    height: 5em;
}

/*/fine parte inferiore main*/

/*footer*/
.footer-style{
    background-color: black;
    color: white;

}

.container-centered-footer{
    width:70%;
    margin-left: auto;
    margin-right: auto;
    padding: 3em 0;
}

footer .small-hr{
    border-color: white;
    width: 15%;
}

.vertical-ul{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
   padding: 2em;
   
    list-style-type: none;

}

.horizontal-ul{
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    list-style-type: none;
    
}

.vertical-ul-inner{
    display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
   
    list-style-type: none;
    margin-bottom: 70px;
}

footer a{
    color: white;
    text-decoration: none;
}

footer a:hover{
    text-decoration: underline;
}

